[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
denali-macro = { workspace = true }
denali-core = { workspace = true }
denali-client-core = { workspace = true }
denali-client = { workspace = true }
frunk = { workspace = true }

[[example]]
name = "simple"
path = "simple.rs"

[[example]]
name = "wayland_book"
path = "wayland_book.rs"
