[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
denali-macro = { workspace = true }
denali-core = { workspace = true }
denali-client = { workspace = true }
chugach-windowing = { workspace = true }
frunk = { workspace = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tracing = { workspace = true }

[[example]]
name = "simple"
path = "simple.rs"

[[example]]
name = "wayland_book"
path = "wayland_book.rs"

[[example]]
name = "create_window"
path = "create_window.rs"
